# cpp_spider

./: CMakeLists.txt  README.md
Client/Headers/: Client.hpp  ConnectionManager.hpp  IClient.hpp  IEvent.hpp  KeyboardEvent.hpp  MouseEvent.hpp
Client/Sources/: Client.cpp  KeyBoardEvent.cpp  MouseEvent.cpp  main.cpp
Server/: Makefile
Server/Headers/: Connection.hpp  DataManager.hpp  IServer.hpp  Message.hpp  Server.hpp
Server/Src/: Connection.cpp  DataManager.cpp  Server.cpp  main.cpp
